--- a/HTML/index.html
+++ b/HTML/index.html
@@ -126,25 +126,25 @@
 
 <div id="baixo">
     <ul>
-        <li><a href="#">Site da Célula Vegetal</a></li>
+        <li><a href="https://luanagrazi.github.io/PROJETO/codigo.html/index.html">Site da Célula Vegetal</a></li>
     </ul>
 </div>
 
 <div id="baixo">
     <ul>
-        <li><a href="#">Site da Procarionte</a></li>   
+        <li><a href="https://saraalice7.github.io/saraalice_procarionte/procarionte">Site da Procarionte</a></li>   
     </ul>
 </div>
 
 <div id="baixo">
     <ul>
-        <li><a href="#">Site da Endossimbiose</a></li>   
+        <li><a href="https://luanagrazi.github.io/laura_endossibiose_/html/endo.html">Site da Endossimbiose</a></li>   
     </ul>
 </div>
 
 <div id="baixo">
     <ul>
-        <li><a href="#">Quiz</a></li> 
+        <li><a href="https://luanagrazi.github.io/quiz_grupo_integrador/quiz.html">Quiz em Java script</a></li> 
     </ul>
 </div><br><br><br>
 <h5>Referências:</h5>
