--- a/HTML/index.html
+++ b/HTML/index.html
@@ -120,7 +120,10 @@
 
    <nav><h1>VIDEOAULA <a name="ví"></a></h1></nav><br>
 
+   <div class="embed">
    <iframe width="560" height="315" src="https://www.youtube.com/embed/VnSru9UEo5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   </div>
+    
 <br><br>
 <h5>Visite as outras páginas do nosso grupo!</h5><br>
 
@@ -148,8 +151,10 @@
     </ul>
 </div><br><br><br>
 <h5>Referências:</h5>
+    
 https://mundoeducacao.uol.com.br/biologia/celulas-eucariontes.htm<br>
 https://mundoeducacao.uol.com.br/biologia/celula-animal.htm
+
 <a href="#inicio"><u>Ir para o início desta página</u></a><br>
 <a name="final"></a>
 <h5>Feito por: Renata Rayane de Oliveira Gomes</h5>
