--- a/HTML/index.html
+++ b/HTML/index.html
@@ -121,8 +121,10 @@
    <nav><h1>VIDEOAULA <a name="ví"></a></h1></nav><br>
 
    <div class="embed-container">
+   <center>
    <iframe width="560" height="315" src="https://www.youtube.com/embed/VnSru9UEo5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
    </div>
+   </center>
 <br><br>
 <h5>Visite as outras páginas do nosso grupo!</h5><br>
 
