--- a/HTML/index.html
+++ b/HTML/index.html
@@ -41,10 +41,8 @@
 <br>
   
     <nav><h1>CARACTERÍSTICAS DAS CÉLULAS EUCARIONTES <a name="car"></a></h1></nav>
-    <div class="container">
-    <img src="../IMAGENS/ana.webp">
+    <center><img src="../IMAGENS/ana.webp"></center>
 <p>Costumamos ouvir dizer que as células têm três partes básicas: membrana plasmática, citoplasma e núcleo. No entanto, isso não é totalmente verdade, pois nem todas as células possuem o núcleo. As células eucariontes (do grego eu, que significa verdadeiro, e karyon, que significa núcleo) são células que possuem núcleo, ou seja, seu material genético é envolvido por um envoltório nuclear, constituído por duas membranas concêntricas.<br><br> Além da presença de um núcleo definido na célula animal, organelas como mitocôndrias, complexo de golgi, retículo endoplasmático, lisossomo, peroxissomos são observados no citoplasma desse tipo celular.<br><br> Essas organelas são fundamentais para garantir o funcionamento das células, e são responsáveis por realizar diferentes funções.</p>
-</div>
 <br>
 
     <h4>MEMBRANA PLASMÁTICA <a name="mem"></a></h4>
