--- a/HTML/index.html
+++ b/HTML/index.html
@@ -112,7 +112,7 @@
 <h4>DIFERENÇAS ENTRE A CÉLULA ANIMAL E A VEGETAL <a name="dif"></a></h4><br>
 
  <center>
-    <iframe src="../IMAGENS/dif.jpg" width="100%" height="450"></iframe>
+    <img src="../IMAGENS/dif.jpg" width="100%" height="450">
  </center>
 <br>
 
@@ -155,6 +155,7 @@ https://mundoeducacao.uol.com.br/biologia/celulas-eucariontes.htm<br>
 https://mundoeducacao.uol.com.br/biologia/celula-animal.htm
 
 <a href="#inicio"><u>Ir para o início desta página</u></a><br>
+
 <a name="final"></a>
 <h5>Feito por: Renata Rayane de Oliveira Gomes</h5>
 </body>
