--- a/HTML/index.html
+++ b/HTML/index.html
@@ -112,7 +112,7 @@
 <h4>DIFERENÇAS ENTRE A CÉLULA ANIMAL E A VEGETAL <a name="dif"></a></h4><br>
 
  <center>
-    <img src="../IMAGENS/dif.jpg" width="100%" height="450">
+     <iframe img src="../IMAGENS/dif.jpg" width="100%" height="450"></iframe>
  </center>
 <br>
 
