--- a/HTML/index.html
+++ b/HTML/index.html
@@ -149,10 +149,10 @@
         <li><a href="https://luanagrazi.github.io/quiz_grupo_integrador/quiz.html">Quiz em Java script</a></li> 
     </ul>
 </div><br><br><br>
-<h5>Referências:<br>
+<h5>Referências:<h5><br>
     
 https://mundoeducacao.uol.com.br/biologia/celulas-eucariontes.htm<br>
-https://mundoeducacao.uol.com.br/biologia/celula-animal.htm</h5><br>
+https://mundoeducacao.uol.com.br/biologia/celula-animal.htm<br>
 
 <a href="#inicio"><u>Ir para o início desta página</u></a><br>
 
